--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,11 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.0.0
   dio: ^5.9.0
-  retrofit: ^4.7.1
   logger: ^2.6.1
   get_it: ^8.2.0
   injectable: ^2.5.1
   flutter_secure_storage: ^9.2.4
-  freezed_annotation: ^3.1.0
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_dotenv: ^5.2.1
   flutter_screenutil: ^5.9.3
@@ -30,12 +29,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.7.0
-  freezed: ^3.0.0-0.0.dev
-  json_serializable: ^6.10.0
-  injectable_generator: ^2.8.1
-  retrofit_generator: ^10.0.2
+  flutter_lints: ^6.0.0
+  build_runner: ^2.4.14
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
+  injectable_generator: ^2.6.1
 
 flutter:
   uses-material-design: true
