--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
   cupertino_icons: ^1.0.8
   go_router: ^16.2.0
@@ -37,3 +40,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
