--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,24 @@ dev_dependencies:
   freezed: ^2.5.8
   json_serializable: ^6.9.4
   injectable_generator: ^2.6.1
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.6
 
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/
+    - assets/images/
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_native_splash:
+  color: "#673AB7"
+  android_12:
+    image: assets/images/logo.png
+    color: "#1F0158"
