--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   equatable: ^2.0.7
   reactive_forms: ^18.1.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
